--- a/package.json
+++ b/package.json
@@ -1,7 +1,16 @@
 {
-  "name": "vanilla-basic",
+  "name": "telegram-gpt-bot",
   "version": "1.0.0",
-  "scripts": { 
-    "start": "sirv ./src public --cors --single --no-clear --port 8000"
+  "description": "Telegram bot that uses OpenAI's GPT-3 to generate text",
+  "main": "app.js",
+  "author": "Arunachalam",
+  "scripts": {
+    "start": "node app.js"
+  },
+  "dependencies": {
+    "dotenv": "^10.0.0",
+    "node-fetch": "^3.1.0",
+    "telegraf": "^4.4.2",
+    "@openai/api": "^0.7.2"
   }
 }
